[project]
name = "learn-strawberry-graphql"
version = "0.1.0"
description = ""
authors = [
    {name = "Aldi Setiawan",email = "aldi.setiawan@dipostar.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "strawberry-graphql[fastapi] (>=0.282.0,<0.283.0)",
    "alembic (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
